[package]
name = "rsmenu"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_core =  "0.69"
conrod_vulkano = "0.69.0"
vulkano = "0.16"
vulkano-shaders = "0.16"
conrod_winit = "0.69"
find_folder = "0.3"
image = "0.22"
vulkano-win = "0.16"
winit = "0.19"
rand = "0.7"
tokio = { version = "0.2.13", features = ["time"] }
futures-util = "0.3.4"

[dev-dependencies]
tokio = { version = "0.2.13", features = ["macros"] }