[package]
name = "rufi"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
conrod_core =  "0.69"
conrod_winit = "0.69"
find_folder = "0.3"
image = "0.22"
rand = "0.7"
conrod_wgpu = "0.69"
winit = "0.21"
wgpu = "0.4"

[dev-dependencies]
tokio = { version = "0.2.13", features = ["macros"] }